Bug 753117 - replace use of repoze.who with plain pyramid auth; r=telliott

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,7 @@ cef
 unittest2
 WebTest
 WSGIProxy
-repoze.who
-repoze.who/plugins.macauth
-pyramid_whoauth
+pyramid_macauth
 tokenlib
 macauthlib
 metlog-py[zeromqpub]
