Testing the memcached client on Travis.ci.
For testing the memcached client retrieving an empty value will fail.
To avoid this we set a value first.

Some statements have been updated to make flake8 happy and the transition to Python 3 easier.
The requirements file now has the same constraint as setup.py.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: python
 
 python:
- - "2.7"
+  - "2.7"
+
+services:
+  - memcached
 
 notifications:
   email:
@@ -14,7 +17,7 @@ notifications:
 
 install:
   - pip install flake8
-  - python setup.py develop
+  - CFLAGS="-Wno-error=write-strings" pip install .[memcache]
 
 script:
   - flake8 ./mozsvc
